--- a/files/etc/pacman.conf
+++ b/files/etc/pacman.conf
@@ -34,7 +34,7 @@ Architecture = auto
 #NoProgressBar
 CheckSpace
 #VerbosePkgLists
-#ParallelDownloads = 5
+ParallelDownloads = 2
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -92,6 +92,6 @@ Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
-#[custom]
+[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
