use qemu-full instead
mainly for spice

--- a/roles/install_pacman_package/defaults/main.yml
+++ b/roles/install_pacman_package/defaults/main.yml
@@ -54,7 +54,7 @@ pacman_package_defaults:
   - pandoc
   - pass
   - pv
-  - qemu-base # libvirt backend
+  - qemu-full # libvirt backend
   - ripgrep
   - strace
   - sudo
