--- a/roles/argocd_cli/tasks/main.yml
+++ b/roles/argocd_cli/tasks/main.yml
@@ -1,8 +1,11 @@
 ---
 - name: ensure ~/.local/bin directory
   file:
-    path: ~/.local/bin
+    path: "{{ item }}"
     state: directory
+  loop:
+    - ~/.local/bin
+    - ~/.bash_completion.d
 
 - name: downloads argocd binary
   ansible.builtin.get_url:
@@ -14,5 +17,14 @@
   ansible.builtin.file:
     dest: ~/.local/bin/argocd
     mode: '0755'
-    owner: "{{ ansible_user_uid }}"
-    group: "{{ ansible_user_uid }}"
+
+- name: get completion
+  ansible.builtin.shell: ~/.local/bin/argocd completion bash
+  register: shell_argocd_output
+  changed_when: false
+
+- name: copy completion to .bash_completion.d
+  ansible.builtin.copy:
+    content: "{{ shell_argocd_output.stdout }}"
+    dest: ~/.bash_completion.d/argocd
+    mode: '0644'
