--- a/files/etc/pacman.conf
+++ b/files/etc/pacman.conf
@@ -92,6 +92,6 @@ Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
-[custom]
+#[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
