--- a/files/dot-local/share/applications/wine-explorer.desktop
+++ b/files/dot-local/share/applications/wine-explorer.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Wine Explorer
-Comment=Wine Explorer
+Name=Wine Explorer (LINE)
+Comment=Wine Explorer (LINE)
 #Icon=emacs
 Type=Application
 Exec=wine explorer /desktop=Line,1280x720
