--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "private"]
 	path = private
 	url = git@github.com:novicecpp/home-config-ansible-private.git
+[submodule "mygalaxy"]
+	path = mygalaxy
+	url = git@github.com:novicecpp/mygalaxy.git
