update init instruction

--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-ansible = "==9.5.1"
+ansible = "==11.1.0"
+ansible-core = "==2.18.1"
 
 [dev-packages]
 
 [requires]
-python_version = "3.11"
+python_version = "3.13"
