--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,2 @@
 source .venv/bin/activate
-export VIRTUAL_ENV_PROMPT_CUSTOM="(${VIRTUAL_ENV_PROMPT}) "
+export DIRENV_PROMPT_PREFIX="(${VIRTUAL_ENV_PROMPT}) "
